--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <head></head>
 <body>
   <div>
-    <h1>BreedSearch Homework Assignment</h1>
+    <h1>Products & Reviews</h1>
     <div id="mount"></div>
   </div>
   <script src="/bundle.js"></script>
